--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
-    "cheerio": "^1.0.0",
+    "axios-cookiejar-support": "^5.0.5",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "tough-cookie": "^5.1.2",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
