--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "axios-cookiejar-support": "^5.0.5",
+    "ical.js": "^2.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "tough-cookie": "^5.1.2",
