--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
+    "sourceMap": true,
     "rootDir": "./src",
     "strict": true,
     "module": "commonjs",
