--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tough-cookie": "^5.1.2",
+    "axios-cookiejar-support": "^5.0.5",
+    "ical.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
-    "axios-cookiejar-support": "^5.0.5",
-    "ical.js": "^2.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "tough-cookie": "^5.1.2",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
