--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.8.4",
+    "axios-cookiejar-support": "^5.0.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "tough-cookie": "^5.1.2",
-    "axios-cookiejar-support": "^5.0.5",
-    "ical.js": "^2.1.0"
+    "ical.js": "^2.1.0",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
