--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios-cookiejar-support": "^5.0.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "ical.js": "^2.1.0",
     "tough-cookie": "^5.1.2"
